improve openapi
